# codexPat

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.codex/: hooks.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: asset_import.rs  diagnostics.rs  main.rs  runtime_setup.rs  sound.rs
apps/desktop/src-tauri/src/bridge/: http.rs  log.rs  mod.rs  protocol.rs  queue.rs  rate_limit.rs
apps/desktop/src-tauri/src/bridge/http/: events.rs  instances.rs  rejection.rs
docs/: README.md  TRANSFER_HANDOFF_2026-06-22.md
scripts/: codex-pet-hook.mjs  doctor.sh  generate_v5_3_gltf_asset.mjs  post_v30_action_asset_acceptance.mjs  post_v30_browser_ux_acceptance.mjs  v10_13_premium_cat_library_smoke.mjs  v10_14_first_run_wizard_smoke.mjs  v10_15_built_in_gallery_ux_smoke.mjs  v10_16_benchmark_surpass_gate_smoke.mjs  v10_1_default_animated_2d_pack_smoke.mjs  v10_2_action_preview_ux_smoke.mjs  v10_3_state_linked_animation_smoke.mjs  v10_4_animated_gltf_clip_gate_smoke.mjs  v10_6_animation_format_rebaseline_smoke.mjs  v10_7_work_cat_v1_visual_smoke.mjs  v10_8_runtime_micro_interaction_smoke.mjs  v10_9_manager_preview_activation_smoke.mjs  v11_1_living_idle_smoke.mjs  v11_2_pointer_interaction_smoke.mjs  v11_3_emotion_layer_smoke.mjs  v11_4_action_composer_smoke.mjs  v11_5_flagship_living_cat_pack_smoke.mjs  v11_6_first_run_delight_smoke.mjs  v11_7_interaction_qa_gate_smoke.mjs  v12-utils.mjs  v12_1_visibility_diagnostics_smoke.mjs  v12_2_window_layering_smoke.mjs  v13-utils.mjs  (+222 more)
(+1659 files in other folders)
