[package]
name = "agent-desktop-pet"
version = "0.1.0"
description = "Agent Desktop Pet Phase 1 shell"
authors = ["agent-desktop-pet"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.7"
jsonschema = "0.18"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
